--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "plutolien-web",
+  "name": "plutolien",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^3.0.0",
-    "autoprefixer": "^10.0.4",
-    "framer-motion": "^2.9.5",
-    "next": "10.0.3",
-    "postcss": "^8.1.10",
-    "postcss-import": "^13.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scroll": "^1.8.1",
-    "react-slick": "^0.27.13",
-    "slick-carousel": "^1.8.1",
-    "tailwindcss": "^2.0.1"
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.2"
+    "@types/node": "17.0.34",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.6.4"
   }
 }
