--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "plutolien",
+  "name": "pluto-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "next build && next export"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "18.1.0",
-    "sass": "^1.52.0"
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "autoprefixer": "^10.0.4",
+    "framer-motion": "^2.9.5",
+    "next": "10.0.3",
+    "postcss": "^8.1.10",
+    "postcss-import": "^13.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scroll": "^1.8.1",
+    "react-slick": "^0.27.13",
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.34",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
+    "babel-plugin-inline-react-svg": "^1.1.2"
   }
 }
