--- a/package.json
+++ b/package.json
@@ -3,30 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "next build && next export"
+    "start": "npm dev",
+    "dev": "concurrently \"npm:dev:*\"",
+    "dev:next": "next dev",
+    "dev:tailwind": "npx tailwindcss -i src/styles/style.css -o src/styles/build.css --minify --watch",
+    "build": "npm build:tailwind && npm build:next",
+    "build:next": "next build",
+    "build:tailwind": "npx tailwindcss -i src/styles/style.css -o src/styles/build.css --minify",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fullhuman/postcss-purgecss": "^3.0.0",
-    "@mui/icons-material": "^5.8.2",
-    "@mui/material": "^5.8.2",
-    "autoprefixer": "^10.0.4",
-    "framer-motion": "^2.9.5",
-    "next": "10.0.3",
-    "postcss": "^8.1.10",
-    "postcss-import": "^13.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scroll": "^1.8.1",
-    "react-slick": "^0.27.13",
-    "slick-carousel": "^1.8.1",
-    "tailwindcss": "^2.0.1"
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@iconify/icons-heroicons-solid": "^1.2.1",
+    "@react-icons/all-files": "^4.1.0",
+    "heroicons-react": "^1.4.1",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-scroll": "^1.8.7",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.2"
+    "@types/node": "17.0.36",
+    "@types/react": "18.0.9",
+    "concurrently": "^7.2.1",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.7.2"
   }
 }
