--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@heroicons/react": "^1.0.6",
     "@iconify/icons-heroicons-solid": "^1.2.1",
     "@react-icons/all-files": "^4.1.0",
-    "heroicons-react": "^1.4.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-scroll": "^1.8.7",
-    "tailwindcss": "^3.0.24"
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "@types/node": "17.0.36",
     "@types/react": "18.0.9",
+    "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.1",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
 }
