--- a/package.json
+++ b/package.json
@@ -6,18 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "eslint src --fix && yarn format",
-    "lint:strict": "eslint --max-warnings=0 src",
-    "typecheck": "tsc --noEmit --incremental false",
-    "test:watch": "jest --watch",
-    "test": "jest",
-    "format": "prettier -w .",
-    "format:check": "prettier -c .",
     "release": "standard-version",
     "push-release": "git push --follow-tags origin main",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "prepare": "husky install"
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.4",
@@ -52,7 +43,6 @@
     "lint-staged": "^12.5.0",
     "next-sitemap": "^2.5.28",
     "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.1.2",
